@@ -1,3 +1,8 @@
+2020-03-17  Frederik Seiffert <frederik@algoriddim.com>
+
+	* Source/NSThread.m: Use pthread_setname_np result instead of errno,
+	which fixes setting thread name on platforms where errno is not set.
+
 2020-03-12  Fred Kiefer <fredkiefer@gmx.de>
 
 	* Source/NSURL.m: Fix compiler warnigns.
